@@ -304,6 +304,9 @@ BUGFIXES:
   ZOOKEEPER-1625. zkServer.sh is looking for clientPort in config file, but it
   may no longer be there with ZK-1411 (Alexander Shraer via michim)
 
+  ZOOKEEPER-1495. ZK client hangs when using a function not available
+  on the server. (Skye W-M via phunt)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1170. Fix compiler (eclipse) warnings: unused imports,
